--- a/index3.html
+++ b/index3.html
@@ -164,7 +164,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <img src="gambarr/th.jpeg" alt="Pangan Masa Depan">
+        <img src="gambarr/jambu.jpeg" alt="Pangan Masa Depan">
         <h1>Menyediakan Pangan Terbaik untuk Dunia</h1>
     </section>
 
